--- a/layouts/content-sidebar.css
+++ b/layouts/content-sidebar.css
@@ -1,6 +1,9 @@
 /*
-Theme Name: Ledger
-Layout: Content-Sidebar
+ * Theme Name: Ledger
+ *
+ * Layout: Content-Sidebar
+ *
+ * Learn more: https://developer.wordpress.org/themes/basics/template-files/
 */
 
 .content-area {
@@ -19,4 +22,13 @@ Layout: Content-Sidebar
 .site-footer {
 	clear: both;
 	width: 100%;
+}
+
+.no-sidebar .content-area {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+.no-sidebar .site-main {
+	margin-right: 0;
 }
