--- a/layouts/sidebar-content.css
+++ b/layouts/sidebar-content.css
@@ -1,6 +1,9 @@
 /*
-Theme Name: Ledger
-Layout: Sidebar-Content
+ * Theme Name: Ledger
+ *
+ * Layout: Sidebar-Content
+ *
+ * Learn more: https://developer.wordpress.org/themes/basics/template-files/
 */
 
 .content-area {
@@ -19,4 +22,13 @@ Layout: Sidebar-Content
 .site-footer {
 	clear: both;
 	width: 100%;
+}
+
+.no-sidebar .content-area {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+.no-sidebar .site-main {
+	margin-right: 0;
 }
