--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -1,7 +1,7 @@
 // Rem output with px fallback
 @mixin font-size($sizeValue: 1) {
-	font-size: ($sizeValue * 16) + px;
-	font-size: $sizeValue + rem;
+	font-size: ($sizeValue * 16) * 1px;
+	font-size: $sizeValue * 1rem;
 }
 
 // Center block
@@ -15,9 +15,15 @@
 @mixin clearfix() {
 	content: "";
 	display: table;
+	table-layout: fixed;
 }
 
 // Clear after (not all clearfix need this also)
 @mixin clearfix-after() {
 	clear: both;
+}
+
+// Column width with margin
+@mixin column-width($numberColumns: 3) {
+	width: map-get( $columns, $numberColumns ) - ( ( $columns__margin * ( $numberColumns - 1 ) ) / $numberColumns );
 }
