--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -5,6 +5,7 @@
 	width: 100%;
 
 	ul {
+		display: none;
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
@@ -13,7 +14,7 @@
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 			float: left;
 			position: absolute;
-			top: 1.5em;
+			top: 100%;
 			left: -999em;
 			z-index: 99999;
 
@@ -23,7 +24,8 @@
 			}
 
 			li {
-				&:hover > ul {
+				&:hover > ul,
+				&.focus > ul {
 					left: 100%;
 				}
 			}
@@ -32,24 +34,30 @@
 				width: 200px;
 			}
 
-			:hover > a {
+			:hover > a,
+			.focus > a {
 			}
 
-			a:hover {
+			a:hover,
+			a.focus {
 			}
 		}
 
-		li:hover > ul {
+		li:hover > ul,
+		li.focus > ul {
 			left: auto;
 		}
 	}
+
 	li {
 		float: left;
 		position: relative;
 
-		&:hover > a {
+		&:hover > a,
+		&.focus > a {
 		}
 	}
+
 	a {
 		display: block;
 		text-decoration: none;
@@ -57,44 +65,43 @@
 
 	.current_page_item > a,
 	.current-menu-item > a,
-	.current_page_ancestor > a {
+	.current_page_ancestor > a,
+	.current-menu-ancestor > a {
 	}
 }
 
 /* Small menu. */
-.menu-toggle {
-	display: none;
+.menu-toggle,
+.main-navigation.toggled ul {
+	display: block;
 }
 
-@media screen and (max-width: 600px) {
-	.menu-toggle,
-	.main-navigation.toggled .nav-menu {
-		display: block;
-	}
-
-	.main-navigation ul {
+@media screen and (min-width: 37.5em) {
+	.menu-toggle {
 		display: none;
 	}
+	.main-navigation ul {
+		display: block;
+	}
 }
 
-.site-main .comment-navigation,
-.site-main .posts-navigation,
-.site-main .post-navigation {
-	margin: 0 0 1.5em;
-	overflow: hidden;
-}
+.comment-navigation,
+.posts-navigation,
+.post-navigation {
 
-.comment-navigation .nav-previous,
-.posts-navigation .nav-previous,
-.post-navigation .nav-previous {
-	float: left;
-	width: 50%;
-}
+	.site-main & {
+		margin: 0 0 1.5em;
+		overflow: hidden;
+	}
 
-.comment-navigation .nav-next,
-.posts-navigation .nav-next,
-.post-navigation .nav-next {
-	float: right;
-	text-align: right;
-	width: 50%;
+	.nav-previous {
+		float: left;
+		width: 50%;
+	}
+
+	.nav-next {
+		float: right;
+		text-align: right;
+		width: 50%;
+	}
 }
